--- a/introduction_to_statistical_learning.qmd
+++ b/introduction_to_statistical_learning.qmd
@@ -12,9 +12,7 @@ title-block-banner-color: "white"
 
 The fundamental idea of statistical learning can be expressed through a simple formula:
 
-$$
-Y = f(X) + ϵ
-$$
+$Y = f(X) + \epsilon$
 
 This formula tells us that any outcome we wish to study or predict can be understood as the result of some systematic relationship between independent and dependent variables, plus some random variation that we cannot fully explain or control. The goal of statistical learning is to estimate the function $f$ based on observed data, so that we can either predict Y for new observations or understand how changes in X are associated with changes in Y.
 
@@ -22,11 +20,11 @@ Let's now explain each component of this formula in detail.
 
 - The **dependent variable** or response, denoted by **Y**, represents the response that we are trying to understand, explain, or predict. This is the variable whose variation we want to account for using other available information. It is called *dependent* precisely because its values depend on, or are influenced by, other variables in the system we are studying.
 
-- The **independent variable** or predictor, denoted by **X**, represents the input information that we use to explain or predict the outcome Y. In most realistic situations, we have multiple predictors rather than just one, so X typically represents a collection of variables written as $X = (X_1, X_2, ..., X_p)$, where $X_p$ indicates the total number of predictors available. The key characteristic of predictors is that they provide information that helps us understand or anticipate the values of the dependent variable.
+- The **independent variable** or predictor, denoted by **X**, represents the input information that we use to explain or predict the outcome. In most realistic situations, we have multiple predictors rather than just one, so X typically represents a collection of variables written as $X = (X_1, X_2, ..., X_p)$, where $X_p$ indicates the total number of predictors. The key characteristic of predictors is that they provide information that helps us understand or anticipate the values of the dependent variable.
 
-- The function **$f$** represents the **systematic relationship between the dependent variable and the indipendent variable**. This function captures all the information that the independent variables collectively provide about the dependent variable. In other words, $f$ describes the pattern or rule that connects predictors to response in a consistent, reproducible way. The crucial point is that in real-world applications, the true form of $f$ is almost always unknown to us. We never directly observe this function; instead, we must estimate it based on the data we have collected. The entire enterprise of statistical learning revolves around developing methods to estimate $f$ as accurately as possible, given the constraints of our data and our analytical goals.
+- The function **$f$** represents the **systematic relationship between the dependent variable and the indipendent variable**. This function captures all the information that the independent variables collectively provide about the dependent variable. In other words, $f$ describes the pattern or rule that connects predictors to response in a consistent, reproducible way. The crucial point is that in real-world applications, the true form of $f$ is almost always unknown to us. We never directly observe this function; instead, we must estimate it based on the data we have collected. The entire enterprise of statistical learning revolves around developing methods to estimate $f$ as accurately as possible.
 
-- The **error term**, denoted by **$ϵ$**, represents the random component of the relationship between dependent and independent variables. This term captures all the variation in Y that cannot be explained by the predictors X. The error term is assumed to be independent of X and to have a mean of zero, which means that on average, the errors cancel out and do not systematically bias our predictions in one direction or another. The error term exists for several important reasons.
+- The **error term**, denoted by **$\epsilon$**, represents the random component of the relationship between dependent and independent variables. This term captures all the variation in Y that cannot be explained by the $X_p$. The error term is assumed to be independent of X and to have a mean of zero, which means that on average, the errors cancel out and do not systematically bias our predictions in one direction or another. The error term exists for several important reasons.
 
   - First, there may be variables that influence dependent variable but that we have not measured or included in our analysis.
   
@@ -34,7 +32,7 @@ Let's now explain each component of this formula in detail.
   
   - Third, our measurements themselves may contain some degree of imprecision or noise.
 
-To make these concepts concrete, let me illustrate them with the example drawn from sociological research. Consider a sociologist studying income inequality and social mobility. The researcher might want to understand what determines a person's income in adulthood. The dependent variable Y would be adult income, measured in monetary units. The predictors X might encompass the person's own educational credentials, their occupation, the region where they live, their parents' socioeconomic status, their race and gender, and the number of years of work experience they have accumulated. The function $f$ would capture the systematic relationships between these characteristics and income, revealing how the labor market rewards different attributes and how social background continues to influence economic outcomes across generations. The error term $ϵ$ would account for all the variation in income that these measured factors cannot explain. This residual variation might stem from unmeasured differences in job performance, luck in finding particularly good or bad employment matches, health shocks that affect earning capacity, or discrimination that varies in ways not captured by the measured variables.
+To make these concepts concrete, let me illustrate them with the example. Consider a researcher studying income inequality and social mobility. The researcher might want to understand what determines a person's income in adulthood. The dependent variable Y would be adult income, measured in monetary units. The predictors X might encompass the person's own educational credentials, their occupation, the region where they live, their parents' socioeconomic status, their race and gender, and the number of years of work experience they have accumulated. The function $f$ would capture the systematic relationships between these characteristics and income, revealing how the labor market rewards different attributes and how social background continues to influence economic outcomes across generations. The error term $\epsilon$ would account for all the variation in income that these measured factors cannot explain. This residual variation might stem from unmeasured differences in job performance, luck in finding particularly good or bad employment matches, health shocks that affect earning capacity, or discrimination that varies in ways not captured by the measured variables.
 
 We can write this relationship as: $Y\ =\ f(X_1,\ X_2,\ X_3,\ X_4,\ X_5,\ X_6,\ X_7)\ +\ ϵ$
 
@@ -56,25 +54,21 @@ In this formula, Y represents adult income measured in monetary units such as an
 
 The function $f$ captures the systematic relationship between all these predictors and adult income. This function describes how the labor market values different combinations of education, occupation, location, background, and demographic characteristics. The precise form of $f$ is unknown to us and must be estimated from data. It might be relatively simple, such as a linear combination of the predictors, or it might be quite complex, involving interactions between variables and nonlinear relationships.
 
-The error term $ϵ$ represents all the variation in adult income that cannot be explained by the seven predictors we have included. This encompasses unmeasured factors such as individual differences in productivity, motivation, and interpersonal skills, as well as random events like fortunate or unfortunate timing in job searches, health events that affect earning capacity, and idiosyncratic experiences of discrimination or favoritism in the workplace, and so on.
+The error term $\epsilon$ represents all the variation in adult income that cannot be explained by the seven predictors we have included. This encompasses unmeasured factors such as individual differences in productivity, motivation, and interpersonal skills, as well as random events like fortunate or unfortunate timing in job searches, health events that affect earning capacity, and idiosyncratic experiences of discrimination or favoritism in the workplace, and so on.
 
-## Relationship between dependent and independent variable
+## Relationship between Dependent and Independent Variable
 
-### $f$ thing
+The function $f$ is the central object of interest in statistical learning. It represents the systematic relationship between the independent variable and the dependent variable, capturing all the information that the independent variables provide about the dependent variable. When we say that $Y = f(X) + \epsilon$, we are asserting that the response can be decomposed into two parts: a predictable component $f(X)$ that depends on the values of the predictors, and an unpredictable component $\epsilon$ that represents random variation. The function $f$ is what connects the world of responses to the world of predictors in a consistent, reproducible manner.
 
-The function $f$ is the central object of interest in statistical learning. It represents the systematic relationship between the independent variable and the dependent variable, capturing all the information that the independent variables provide about the dependent variable. When we say that $Y = f(X) + ϵ$, we are asserting that the response can be decomposed into two parts: a predictable component $f(X)$ that depends on the values of the predictors, and an unpredictable component $ϵ$ that represents random variation. The function $f$ is what connects the world of responses to the world of predictors in a consistent, reproducible manner.
+Understanding the nature of $f$ is crucial because it embodies the underlying pattern that governs how changes in the independent variable translate into changes in the dependent variable. If we knew $f$ perfectly, we would understand exactly how each predictor influences the response, how predictors interact with one another, and what response to expect for any given combination of predictor values. However, in virtually all real-world applications, $f$ is unknown. We never observe $f$ directly; we only observe data points consisting of predictor values and corresponding responses. The entire purpose of statistical learning is to use these observed data points to construct an estimate of $f$, which we denote as $\hat{f}$. The reasons we might want to estimate $f$ fall into two broad categories: prediction and inference. These two goals are conceptually distinct, and they often lead us to prefer different types of statistical learning methods.
 
-Understanding the nature of $f$ is crucial because it embodies the underlying pattern that governs how changes in the independent variable translate into changes in the dependent variable. If we knew $f$ perfectly, we would understand exactly how each predictor influences the response, how predictors interact with one another, and what response to expect for any given combination of predictor values. However, in virtually all real-world applications, $f$ is unknown. We never observe $f$ directly; we only observe data points consisting of predictor values and corresponding responses. The entire purpose of statistical learning is to use these observed data points to construct an estimate of $f$, which we denote as $\hat{f}$. This estimate allows us to either make predictions about future outcomes or draw inferences about the relationships between variables.
+**Prediction** is concerned with accurately anticipating the value of Y for new observations where we know the predictors X but do not yet know the response of the predictors. In prediction tasks, we treat $\hat{f}$ as a kind of black box. We do not necessarily care about the internal workings of our estimated function or about which specific predictors matter most. What we care about is whether our estimate $\hat{f}$ produces accurate predictions when applied to new data. The quality of predictions depends on two sources of error:
 
-The reasons we might want to estimate $f$ fall into two broad categories: prediction and inference. These two goals are conceptually distinct, and they often lead us to prefer different types of statistical learning methods.
+1. The first is **reducible error**, which arises because our estimate $\hat{f}$ is imperfect and does not exactly match the true $f$. We can potentially reduce this error by using better statistical learning methods or by collecting more data.
 
-**Prediction** is concerned with accurately anticipating the value of Y for new observations where we know the predictors X but do not yet know the response of the predictors. In prediction tasks, we treat $\hat{f}$ as a kind of black box. We do not necessarily care about the internal workings of our estimated function or about which specific predictors matter most. What we care about is whether our estimate $\hat{f}$ produces accurate predictions when applied to new data. The quality of our predictions depends on two sources of error. The first is **reducible error**, which arises because our estimate $\hat{f}$ is imperfect and does not exactly match the true $f$. We can potentially reduce this error by using better statistical learning methods or by collecting more data. The second is **irreducible error**, which corresponds to the variance of $ϵ$. Even if we had a perfect estimate of $f$, our predictions would still contain some error because Y is inherently influenced by random factors that cannot be predicted from X alone.
-
-To illustrate prediction using our income example, imagine that a government agency wants to identify individuals who are at risk of falling into poverty so that it can target social assistance programs more effectively. The agency has access to administrative data containing information about people's education, occupation, geographic location, family background, race, gender, and work experience. The goal is to predict each person's income based on these characteristics. In this context, the agency does not need to understand precisely why certain combinations of predictors lead to low income. What matters is that the predictive model accurately identifies individuals whose incomes are likely to fall below some threshold. The function $\hat{f}$ serves as a tool for sorting people into risk categories, and its value is judged entirely by how well it predicts actual incomes.
+2. The second is **irreducible error**, which corresponds to the variance of $\epsilon$. Even if we had a perfect estimate of $f$, our predictions would still contain some error because Y is inherently influenced by random factors that cannot be predicted from X alone.
 
 **Inference**, by contrast, is concerned with understanding the relationship between the predictors and the outcome. When our goal is inference, we cannot treat $\hat{f}$ as a black box because we need to know its exact form. We want to answer questions such as which predictors are associated with the response, what is the direction and magnitude of each predictor's effect, and whether the relationships are linear or more complex. Inference requires that our estimate $\hat{f}$ be interpretable, meaning that we can examine it and draw substantive conclusions about how the world works.
-
-Returning to the income example, suppose a sociologist wants to understand the mechanisms of income inequality. The researcher might ask questions such as: *How much does an additional year of education increase expected income? Does the effect of education differ by race or gender? How large is the income penalty associated with being female, after controlling for education, occupation, and experience?* These are inferential questions because they seek to illuminate the structure of $f$ itself, not merely to use $f$ for prediction. Answering these questions requires a model that allows the researcher to isolate the contribution of each predictor and to interpret coefficients or other parameters in substantively meaningful ways. A model that predicts income very accurately but does not reveal anything about how individual predictors matter would be useless for this purpose.
 
 In practice, many research projects involve elements of both prediction and inference. A researcher studying income might want to understand the determinants of earnings while also developing a model that can predict incomes for new individuals. However, there is often tension between these goals because the methods that produce the most accurate predictions are not always the most interpretable, and the most interpretable methods do not always produce the best predictions.
 
@@ -88,7 +82,7 @@ The parametric approach has several important advantages. Because we have reduce
 
 **Non-parametric methods** take a fundamentally different approach. Instead of assuming a specific functional form for $f$, non-parametric methods seek an estimate that gets close to the data points without imposing strong prior assumptions about the shape of the relationship. The idea is to let the data speak for themselves and to allow $\hat{f}$ to take whatever form best fits the observed patterns. One example of a non-parametric method is the thin-plate spline, which estimates $f$ as a smooth surface that passes near the observed data points. The analyst does not specify in advance that $f$ should be linear or quadratic or any other particular form. Instead, the method finds a smooth function that fits the data well, subject to some constraint on how wiggly or rough the function is allowed to be. Another example is the k-nearest neighbors method, which predicts the outcome for a new observation by averaging the outcomes of the k training observations that are most similar to it in terms of the predictor values.
 
-The main advantage of non-parametric methods is their flexibility. Because they do not assume a particular form for $f$, they can potentially capture a much wider range of relationships, including highly nonlinear patterns and complex interactions that would be missed by a simple parametric model. If the true $f$ has an unusual or complicated shape, a non-parametric method has a better chance of approximating it accurately. However, non-parametric methods also have important disadvantages. Because they do not reduce the problem to estimating a small number of parameters, they typically require much larger samples to produce accurate estimates. The flexibility that allows non-parametric methods to fit complex patterns also makes them prone to overfitting, especially when sample sizes are limited. Furthermore, the estimates produced by non-parametric methods are often difficult to interpret. A thin-plate spline or a k-nearest neighbors prediction does not come with coefficients that tell us how each predictor contributes to the outcome. This lack of interpretability makes non-parametric methods less useful for inference, even when they excel at prediction.
+The main advantage of non-parametric methods is their flexibility. Because they do not assume a particular form for $f$, they can potentially capture a much wider range of relationships, including highly nonlinear patterns and complex interactions that would be missed by a simple parametric model. If the true $f$ has an unusual or complicated shape, a non-parametric method has a better chance of approximating it accurately. However, non-parametric methods also have important disadvantages. Because they do not reduce the problem to estimating a small number of parameters, they typically require much larger samples to produce accurate estimates. The flexibility that allows non-parametric methods to fit complex patterns also makes them prone to overfitting, especially when sample sizes are limited. Furthermore, the estimates produced by non-parametric methods are often difficult to interpret. A non-parametric prediction does not come with coefficients that tell us how each predictor contributes to the outcome. This lack of interpretability makes non-parametric methods less useful for inference, even when they excel at prediction.
 
 The choice between parametric and non-parametric methods involves a fundamental trade-off. Parametric methods impose structure on the problem, which makes estimation easier and results more interpretable, but at the cost of potentially misspecifying the true form of $f$. Non-parametric methods avoid this misspecification risk by staying flexible, but they require more data and produce less interpretable results. In practice, the best choice depends on the goals of the analysis, the amount of data available, and how much prior knowledge we have about the likely form of the relationship.
 
@@ -96,13 +90,11 @@ This brings us to a closely related issue: the trade-off between prediction accu
 
 At one end of the spectrum, we have highly restrictive methods like linear regression and its close relatives. Linear regression assumes that $f$ is a linear combination of the predictors, which is a very strong restriction. This restriction means that linear regression can only produce straight lines in one dimension, flat planes in two dimensions, and hyperplanes in higher dimensions. The advantage is that the results are extremely interpretable. Each coefficient has a clear meaning: it tells us the expected change in Y associated with a one-unit increase in the corresponding predictor, holding other predictors constant. We can examine the coefficients and immediately understand which predictors matter, how large their effects are, and in which direction they operate. For inference purposes, this interpretability is invaluable.
 
-Moving along the spectrum toward greater flexibility, we encounter methods like generalized additive models, which relax the linearity assumption by allowing each predictor to have a potentially nonlinear effect on the response, while still maintaining an additive structure. These models are more flexible than linear regression and can capture curved relationships, but they remain reasonably interpretable because we can plot and examine the estimated effect of each predictor separately. Further along the spectrum, we find decision trees, which partition the predictor space into regions and assign a predicted response to each region. Trees are moderately flexible and can capture interactions and nonlinearities, but they remain somewhat interpretable because we can visualize the tree structure and see which predictors are used to make splits and at what values. These methods can approximate extremely complex functions and often achieve superior predictive accuracy on difficult problems. However, their results are very hard to interpret. A neural network with thousands of parameters does not yield simple statements about how each predictor influences the response. The model operates as a black box: we can feed in predictors and obtain predictions, but we cannot easily understand why the model makes the predictions it does.
+Moving along the spectrum toward greater flexibility, we encounter methods like generalized additive models, which relax the linearity assumption by allowing each predictor to have a potentially nonlinear effect on the response, while still maintaining an additive structure. These models are more flexible than linear regression and can capture curved relationships, but they remain reasonably interpretable because we can plot and examine the estimated effect of each predictor separately. Further along the spectrum, we find decision trees, which partition the predictor space into regions and assign a predicted response to each region. Trees are moderately flexible and can capture interactions and nonlinearities, but they remain somewhat interpretable because we can visualize the tree structure and see which predictors are used to make splits and at what values. These methods can approximate extremely complex functions and often achieve superior predictive accuracy on difficult problems. However, their results are very hard to interpret.
 
 One might think that we should always prefer the most flexible method available, reasoning that greater flexibility means better ability to capture the true $f$. Surprisingly, this is not the case. More flexible methods are not always better, even when our sole goal is prediction. The reason is overfitting. A highly flexible method can fit the training data very closely, including the random noise in that particular sample. When we apply the model to new data, the noise patterns will be different, and the overfitted model will perform poorly. In many situations, a simpler, more restrictive model that does not fit the training data as closely will actually generalize better to new observations.
 
 This phenomenon is especially important when sample sizes are limited. With a small sample, there is not enough information to reliably estimate a complex, flexible model, and the risk of overfitting is high. In such cases, imposing structure through a parametric model can actually improve predictive performance by preventing the model from chasing noise. As sample sizes grow larger, we can afford to use more flexible methods because there is enough information to distinguish genuine patterns from random variation.
-
-The choice of method therefore depends on our goals and our circumstances. If our primary goal is inference, we typically prefer more restrictive, interpretable methods like linear regression, even if they sacrifice some predictive accuracy. If our primary goal is prediction and we have ample data, we might prefer more flexible methods that can capture complex patterns, accepting that we will not be able to easily interpret the results. If we want prediction but have limited data, we might still prefer restrictive methods to avoid overfitting.
 
 ### Supervised vs unsupervised learning
 
@@ -141,17 +133,15 @@ A fundamental question in statistical learning can be expressed as a: *how do we
 
 When we build a statistical learning model, we need a way to evaluate how well it actually works. In other words, we need to measure how close the model's predictions are to the real values we observe in the data. This is what we mean by **measuring the quality of fit**. Without such a measure, we would have no principled way of comparing different models or deciding whether a particular approach is adequate for our research question.
 
-### The Mean Squared Error
+### The regression setting
 
 In the regression setting, where the response variable is quantitative, the most commonly used measure of fit is the **mean squared error** (MSE). The mean squared error is calculated by taking each observation in the dataset, computing the difference between the actual observed value and the value that the model predicts, squaring that difference, and then averaging all of these squared differences across every observation. Formally, MSE is expressed as:
 
-$$
-MSE = \frac{1}{n} \times \sum_{i=1}^n(y_i - \hat{f}(x_i))^2
-$$
+$MSE = \frac{1}{n} \times \sum_{i=1}^n(y_i - \hat{f}(x_i))^2$
 
-The logic behind this measure is straightforward. If our model's predictions are very close to the true observed values, the differences will be small, the squared differences will be even smaller, and the average of all those squared differences - the MSE - will be a small number. On the other hand, if the model produces predictions that are far from the actual values for at least some observations, the squared differences will be large, pulling the MSE upward. Squaring the differences serves two purposes: it ensures that positive and negative errors do not cancel each other out, and it penalizes larger errors more heavily than smaller ones.
+The logic behind this measure is straightforward. If our model's predictions are very close to the true observed values, the differences will be small, the squared differences will be even smaller, and the average of all those squared differences will be a small number. On the other hand, if the model produces predictions that are far from the actual values for at least some observations, the squared differences will be large, pulling the MSE upward. Squaring the differences serves two purposes: it ensures that positive and negative errors do not cancel each other out, and it penalizes larger errors more heavily than smaller ones.
 
-To make this concrete, consider our example of predicting adult income. Suppose the researcher has collected data on a sample of one thousand individuals, recording each person's educational credentials, occupation, geographic region, parents' socioeconomic status, race, gender, and years of work experience, along with their actual adult income. The researcher then estimates the function $f$ using some statistical learning method - perhaps a linear regression model - to produce a predicted income $\hat{f}(x_i)$ for each person in the dataset. For one individual, the model might predict an annual income of 38,000 euros while the person actually earns 42,000 euros, yielding a difference of 4,000 euros. For another individual, the model might predict 55,000 euros while the person earns 53,000 euros, giving a difference of 2,000 euros. The mean squared error takes all of these individual discrepancies, squares each one, and averages them across the entire sample. The resulting number gives us a single summary of how well the model's predictions match reality.
+To make this concrete, consider our example of predicting adult income. Suppose the researcher has collected data on a sample of one thousand individuals, recording each person's educational credentials, occupation, region, parents' socioeconomic status, race, gender, and years of work experience, along with their actual adult income. The researcher then estimates the function $f$ using some statistical learning method - perhaps a linear regression model - to produce a predicted income $\hat{f}(x_i)$ for each person in the dataset. For one individual, the model might predict an annual income of 38,000 euros while the person actually earns 42,000 euros, yielding a difference of 4,000 euros. For another individual, the model might predict 55,000 euros while the person earns 53,000 euros, giving a difference of 2,000 euros. The mean squared error takes all of these individual discrepancies, squares each one, and averages them across the entire sample. The resulting number gives us a single summary of how well the model's predictions match reality.
 
 The MSE we just described is computed using the same data that were used to build the model. This is called the **training MSE**, because it measures how well the model fits the training data - the observations the model has already seen and learned from. At first glance, it might seem perfectly reasonable to use the training MSE to evaluate a model. After all, if a model fits the data well, that should mean it is a good model. However, this reasoning is flawed. In most practical situations, we do not actually care how well the model fits the data it was trained on. What we really care about is how well the model will perform on new data that it has never seen before. This new, unseen data is called test data, and the MSE computed on test data is called the **test MSE**.
 
