--- a/references.bib
+++ b/references.bib
@@ -1,19 +1,20 @@
-@article{knuth84,
-  author = {Knuth, Donald E.},
-  title = {Literate Programming},
-  year = {1984},
-  issue_date = {May 1984},
-  publisher = {Oxford University Press, Inc.},
-  address = {USA},
-  volume = {27},
-  number = {2},
-  issn = {0010-4620},
-  url = {https://doi.org/10.1093/comjnl/27.2.97},
-  doi = {10.1093/comjnl/27.2.97},
-  journal = {Comput. J.},
-  month = may,
-  pages = {97–111},
-  numpages = {15}
+@book{field2024discovering,
+  author = {Field, Andy},
+  title = {Discovering Statistics Using IBM SPSS Statistics},
+  edition = {6},
+  year = {2024},
+  publisher = {SAGE Publications Ltd},
+  address = {London, England},
+  isbn = {9781529630008}
 }
 
-
+@book{james2021introduction,
+  author = {Gareth James, Daniela Witten, Trevor Hastie, Robert Tibshirani},
+  title = {An Introduction to Statistical Learning: with Applications in R},
+  edition = {2},
+  year = {2021},
+  publisher = {Springer New York, NY},
+  address = {New York, NY, USA},
+  series = {Springer Texts in Statistics},
+  doi = {https://doi.org/10.1007/978-1-0716-1418-1}
+}
